--- a/Scripts/Final_Scripts/indices_processing/1_indices_preparation.Rmd
+++ b/Scripts/Final_Scripts/indices_processing/1_indices_preparation.Rmd
@@ -47,7 +47,7 @@ Sys.time(); anisoevi_vrt <- vrt_function(anisoevi_gee_folder_filepath); Sys.time
 remove(vrt_function)
 remove(ndvi_gee_folder_filepath, evi_gee_folder_filepath, anisoevi_gee_folder_filepath)
 
-Sys.time(); writeRaster(ndvi_vrt, here("Data", "Indices", "Cerrado_monthlyNDVI_GEE", "mosaic_ndvi.tif")); Sys.time()
+
 ```
 
 #Step 2- application of scaling factor from respective veg index pages of GEE 
@@ -72,6 +72,7 @@ reproject_function <- function (scaled_vrt){
 }  
 
 Sys.time() ; proj_scaled_ndvi_vrt <- reproject_function(scaled_ndvi_vrt); Sys.time()
+#writeRaster(proj_scaled_ndvi_vrt, here("Data", "Indices", "Cerrado_monthlyNDVI_GEE", "buffer_ndvi_proj.tif")) refernce for crs, spatial resolution
 Sys.time() ; proj_scaled_evi_vrt <- reproject_function(scaled_evi_vrt); Sys.time()
 
 remove(reproject_function)
@@ -86,6 +87,7 @@ proj_scaled_ndvi_vrt #263 layers Starts from Feb 2000 as per GEE page
 proj_scaled_ndvi_vrt<- proj_scaled_ndvi_vrt[[2:263]]
 proj_scaled_evi_vrt<- proj_scaled_evi_vrt [[2:263]]
 
+Sys.time(); writeRaster(proj_scaled_ndvi_vrt, here("Data", "Indices", "Cerrado_monthlyNDVI_GEE", "projected_ndvi.tif")); Sys.time()
 ```
 
 #Step 4- extract indices in the climate zones from Catellan et al., 2024
